syntax = "proto3";
package noble.tokenfactory;

option go_package = "noble/x/tokenfactory/types";

message MintingDenom {
  string denom = 1; 
  
}
